# AnimeUnityDownloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
backend/: requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: anime.py  deps.py  downloads.py  filesystem.py  router.py  scheduled.py  search.py  settings.py  sites.py  tracked.py  ws.py
backend/app/models/: __init__.py  download.py  setting.py  tracked_anime.py
backend/app/schemas/: anime.py  download.py  filesystem.py  scheduled.py  setting.py  tracked.py
backend/app/services/: anime_service.py  animeunity_client.py  download_service.py  download_worker.py  extractor_service.py  metadata_service.py  nas_queue.py  notification_service.py  plex_service.py  search_service.py  settings_service.py  tracker_service.py  ws_manager.py
backend/app/utils/: episode_scanner.py  filename.py  retry.py  safe_path.py
backend/tests/: test_episode_scanner.py  test_safe_path.py
docs/superpowers/plans/: 2026-04-11-firetv-player-fixes-verified.md  2026-04-12-telegram-notifications-autoplay.md
docs/superpowers/specs/: 2026-04-12-telegram-notifications-autoplay-design.md
firetv/app/: build.gradle.kts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: anime.ts  client.ts  downloads.ts  filesystem.ts  scheduled.ts  search.ts  settings.ts  sites.ts  tracked.ts
frontend/src/components/: AnimeCard.tsx  DownloadItem.tsx  EpisodeList.tsx  (+4 more)
(+36 files in other folders)
