[project]
name = "animeunity-downloader"
version = "0.1.0"
description = "Self-hosted web app to search and download anime from AnimeUnity with metadata embedding"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "curl-cffi>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "m3u8>=6.0.0",
]
